@@ -1,5 +1,10 @@
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* ZincIntLiteral.cs:
+	* ZincTypeInstArrayExpression.cs: 
+
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* IZincExp.cs:
 	* ZincIdent.cs:
 	* IZincNumExp.cs:
