@@ -8,6 +8,10 @@
 
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* ZincOxide.csproj: 
+
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* Manpage.txt:
 	* ZincOxide.csproj: 
 
